--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ckeditor/ckeditor5-theme-lark": "^35.0.1",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
     "vue": "^3.2.13"
