--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ckeditor/ckeditor5-theme-lark": "^35.0.1",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.18",
     "lodash": "^4.17.21",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
@@ -33,8 +34,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint": "^8.25.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "ts-loader": "^9.4.1",
+    "tslint": "^5.20.1",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.9.10"
   },
   "eslintConfig": {
     "root": true,
