--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.18",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
     "vue": "^3.2.13"
@@ -38,11 +39,15 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^8.25.0",
     "eslint-plugin-vue": "^9.6.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "style-resources-loader": "^1.5.0",
     "ts-loader": "^9.4.1",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.9.10"
+    "typescript": "^3.9.10",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5"
   },
   "eslintConfig": {
     "root": true,
