考虑通过ast 实现表格可输入背景颜色突出

--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@ckeditor/ckeditor5-link": "^35.0.1",
     "@ckeditor/ckeditor5-paragraph": "^35.0.1",
     "@ckeditor/ckeditor5-restricted-editing": "^35.1.0",
+    "@ckeditor/ckeditor5-table": "^35.2.1",
     "@ckeditor/ckeditor5-theme-lark": "^35.0.1",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@types/ckeditor__ckeditor5-engine": "^32.0.11",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.18",
+    "himalaya": "^1.1.0",
+    "htmlparser2": "^8.0.1",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "postcss-loader": "^4.3.0",
