--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.9.10",
+    "typescript": "4.3.5",
     "vue-cli-plugin-style-resources-loader": "^0.1.5"
   },
   "eslintConfig": {
