--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@ckeditor/ckeditor5-inspector": "^4.1.0",
+    "@types/node": "^18.11.9",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
